<resources>
    <string name="app_name">Shout Your Microaggression</string>
    <string name="title_activity_maps"></string>
    <string name="action_favorite">Shout</string>
    <string name="action_settings">About</string>
    <string name="action_here">My Location</string>
    <string name="title_activity_create">Report a Microaggression</string>
    <string name="createReportButton">Shout It</string>
    <string name="createHeading">Shout Your Microaggression</string>
    <string name="createInstructions">NOTE: If a crime has been committed, call the police.\n\nDescribe what happened, leaving out names and other identifying details.</string>
    <string name="createCancelButton">Cancel</string>
    <string name="readButtonBack">Back</string>
    <string name="readButtonDelete">Delete</string>
    <string name="readButtonHug">Send Hug</string>
    <string name="aboutHeading">About this App</string>
    <string name="aboutVersionHeader">Version:</string>
    <string name="aboutVersion">alpha 1.0</string>
    <string name="aboutButtonBack">Back</string>
</resources>
