<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- "Mark Favorite", should appear as action button if possible -->
    <!-- "Here", should appear as action button if possible -->
    <item
        android:id="@+id/action_here"
        android:icon="@drawable/ic_my_location_white_48dp"
        android:title="@string/action_here"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_add_location_white_48dp"
        android:title="@string/action_favorite"
        app:showAsAction="always"/>
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>